# podvoice

./: .gitignore  PLAN.md  README.md  config.example.yaml  pyproject.toml  repository.yaml
.github/workflows/: ci.yml
docs/: PLAN-BEAT-GEMINI.md  VOICE_PE_FLOW.md
esphome/: podvoice-overrides-test.yaml  podvoice-phase0.yaml  podvoice-phase1.yaml  podvoice-phase1b-extend-test.yaml  podvoice-phase1b.yaml  podvoice.yaml  secrets.yaml.example  validate.sh  voice-pe.yaml
podvoice/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  requirements-dev.txt  requirements.txt  run.sh
podvoice/gatekeeper/: __init__.py  __main__.py  audio.py  clips.py  config.py  console.py  constants.py  diag.py  events.py  gatekeeper.py  gemini.py  ha_tools.py  heartbeat.py  history.py  hub.py  interfaces.py  led.py  openai_realtime.py  orchestrator.py  playback.py  playout.py  podconnect.py  providers.py  reply.py  settings.py  sim.py  speech.py  state.py  thin.py  timers.py  voice.py  voicepe.py  watchdog.py  web.py
spikes/: README.md  requirements.txt  s1_continuous_audio.py  s2_playback_latency.py
tests/: conftest.py
tests/fakes/: fake_attention.py  fake_gemini.py  fake_voicepe.py
tests/integration/: test_console.py  test_orchestration.py  test_thin.py  test_web.py
tests/unit/: test_audio.py  test_config_token.py  test_diag.py  test_gatekeeper.py  test_gemini_config.py  test_gemini_resume.py  test_ha_tools.py  test_heartbeat.py  test_history.py  test_hub.py  test_led.py  test_playout.py  test_podconnect.py  test_preroll.py  test_provider_tuning.py  test_providers.py  (+9 more)
tools/: README.md  verify_gemini_live.py
(+9 files in other folders)
